# src/main/java/com/connectfood/core/infrastructure/persistence/adapter/UsersRepositoryImpl.java
@@ -5,8 +5,8 @@ import java.util.Optional;
 
 import com.connectfood.core.domain.model.Users;
 import com.connectfood.core.domain.repository.UsersRepository;
-import com.connectfood.core.infrastructure.persistence.entity.UsersEntity;
 import com.connectfood.core.infrastructure.persistence.jpa.JpaUsersRepository;
+import com.connectfood.core.infrastructure.persistence.mapper.UsersInfrastructureMapper;
 
 import org.springframework.stereotype.Repository;
 
@@ -17,13 +17,14 @@ import lombok.AllArgsConstructor;
 public class UsersRepositoryImpl implements UsersRepository {
 
   private final JpaUsersRepository repository;
+  private final UsersInfrastructureMapper mapper;
 
   @Override
   public List<Users> findAll() {
     final var entities = repository.findAll();
 
     return entities.stream()
-        .map(this::toDomain)
+        .map(mapper::toDomain)
         .toList();
   }
 
@@ -31,42 +32,17 @@ public class UsersRepositoryImpl implements UsersRepository {
   public Optional<Users> findByUuid(String uuid) {
     final var entity = repository.findByUuid(uuid);
 
-    return entity.map(this::toDomain);
+    return entity.map(mapper::toDomain);
   }
 
   @Override
   public Users save(Users user) {
-    final var entity = repository.save(toEntity(user));
-    return toDomain(entity);
+    final var entity = repository.save(mapper.toEntity(user));
+    return mapper.toDomain(entity);
   }
 
   @Override
   public void deleteByUuid(String uuid) {
     repository.deleteByUuid(uuid);
-  }
-
-  private Users toDomain(UsersEntity entity) {
-    return Users.builder()
-        .id(entity.getId())
-        .uuid(entity.getUuid())
-        .fullName(entity.getFullName())
-        .email(entity.getEmail())
-        .login(entity.getLogin())
-        .password(entity.getPassword())
-        .roles(entity.getRoles())
-        .createdAt(entity.getCreatedAt())
-        .updatedAt(entity.getUpdatedAt())
-        .version(entity.getVersion())
-        .build();
-  }
-
-  private UsersEntity toEntity(Users user) {
-    return UsersEntity.builder()
-        .fullName(user.getFullName())
-        .email(user.getEmail())
-        .login(user.getLogin())
-        .password(user.getPassword())
-        .roles(user.getRoles())
-        .build();
   }
 }
